加入空格键开始

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="checkerboard">
     </div>
     <div class="bottom-bar">
-        <button id="play">开始</button>
+        <button id="play" title="可按空格键开始">开始</button>
         <label for="difficulty">
             模式：
             <select name="模式选择" id="mode">
