--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <select name="模式选择" id="mode">
                 <option value="normal" selected>正常</option>
                 <option value="unlimited">无限</option>
+                <option value="throughWall">穿墙</option>
             </select>
         </label>
         <label for="difficulty">
